--- a/MegaDeskWeb/Home.cshtml
+++ b/MegaDeskWeb/Home.cshtml
@@ -1,9 +1,8 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+﻿@{
+    Layout = "~/_Layout.cshtml";
+    Page.Title = "Home";
+}
 
-</body>
-</html>
+<main>
+    <h1> hello there</h1>
+</main>
