basic layout created

--- a/MegaDeskWeb/SearchQuotes.cshtml
+++ b/MegaDeskWeb/SearchQuotes.cshtml
@@ -1,9 +1,8 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+﻿@{ 
+    Layout = "~/_Layout.cshtml";
+    Page.Title = "Search Quotes";
+}
 
-</body>
-</html>
+<main>
+    <h2>Search Quotes!</h2>
+</main>
