--- a/MegaDeskWeb/_Layout.cshtml
+++ b/MegaDeskWeb/_Layout.cshtml
@@ -16,19 +16,63 @@
             background-color: white;
             min-height: 100vh;
             box-sizing: border-box;
-            padding: 0 20px;
+            padding: 20px;
         }
 
         main {
             padding:10px;
         }
+
+        .flex-wrapper {
+            display: flex;
+            align-items: baseline;
+        }
+
+        .flex-end {
+            justify-content: flex-end;
+        }
+
+        .space-between {
+            justify-content: space-between;
+        }
+
+        button.button,
+        input.button {
+            background-color: darkslateblue;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            border: none;
+            font-size: 15px;
+        }
+
+        a.button {
+            text-align: center;
+            color: white;
+            background-color: darkslateblue;
+            border-radius: 5px;
+            padding: 10px;
+            text-decoration: none;
+            user-select: none;
+        }
+
+        .button:hover {
+            background-color: #6858c5;
+            cursor: pointer;
+            text-decoration: none;
+        }
+
+        .button.btn-warning {
+            background-color: #ff2020;
+        }
     </style>
 </head>
 <body>
-    <header>
+    <header class="flex-wrapper space-between">
         <h1>MegaDesk</h1>
+        <a href="~/home">Home</a>
     </header>
-    @RenderBody()
+        @RenderBody()
     <footer>
         <hr />
         <p>Daniel Green &amp; Durid Ahmad</p>
