--- a/MegaDeskWeb/_Layout.cshtml
+++ b/MegaDeskWeb/_Layout.cshtml
@@ -2,70 +2,7 @@
 <html>
 <head>
     <title>@Page.Title</title>
-    <style>
-        @@import url('https://fonts.googleapis.com/css?family=Roboto');
-        html {
-            background-color: lightgray;
-        }
-
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: auto;
-            width: 80vw;
-            min-width: 800px;
-            background-color: white;
-            min-height: 100vh;
-            box-sizing: border-box;
-            padding: 20px;
-        }
-
-        main {
-            padding:10px;
-        }
-
-        .flex-wrapper {
-            display: flex;
-            align-items: baseline;
-        }
-
-        .flex-end {
-            justify-content: flex-end;
-        }
-
-        .space-between {
-            justify-content: space-between;
-        }
-
-        button.button,
-        input.button {
-            background-color: darkslateblue;
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            border: none;
-            font-size: 15px;
-        }
-
-        a.button {
-            text-align: center;
-            color: white;
-            background-color: darkslateblue;
-            border-radius: 5px;
-            padding: 10px;
-            text-decoration: none;
-            user-select: none;
-        }
-
-        .button:hover {
-            background-color: #6858c5;
-            cursor: pointer;
-            text-decoration: none;
-        }
-
-        .button.btn-warning {
-            background-color: #ff2020;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="~/Styles/main.css" />
 </head>
 <body>
     <header class="flex-wrapper space-between">
