--- a/MegaDeskWeb/Home.cshtml
+++ b/MegaDeskWeb/Home.cshtml
@@ -2,7 +2,12 @@
     Layout = "~/_Layout.cshtml";
     Page.Title = "Home";
 }
+<link href="~/stylesheets/home.css" rel="stylesheet" type="text/css" />
 
 <main>
-    <h1> hello there</h1>
+    <h1> Main Menu</h1>
+    <button class="btn default" onclick="window.location.href='AddQuote.cshtml'">Add Quote</button><br />
+    <button class="btn default" onclick="window.location.href='EditQuote.cshtml'">Edit Quote</button><br />
+    <button class="btn default" onclick="window.location.href='SearchQuotes.cshtml'">Search Quote</button><br />
+    <button class="btn default" onclick="window.location.href='DeleteQuote.cshtml'">Delete Quote</button><br />
 </main>
