--- a/MegaDeskWeb/DeleteQuote.cshtml
+++ b/MegaDeskWeb/DeleteQuote.cshtml
@@ -1,9 +1,28 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+﻿@{
+    Layout = "~/_Layout.cshtml";
 
-</body>
-</html>
+    var db = Database.Open("Scriptures");
+    var selectCommand = "SELECT * FROM FavScriptures";
+
+
+
+
+
+    <main>
+        <div>
+            @grid.GetHtml(
+                tableStyle: "grid",
+                headerStyle: "head",
+                alternatingRowStyle: "alt",
+                columns: grid.Columns(
+                    grid.Column(format: @<a href="~/EditScripture?id=@item.ID">Edit</a>),
+                                                     grid.Column("Book"),
+                                                     grid.Column("Scripture"),
+                                                     grid.Column("Date"),
+                                                     grid.Column(format: @<a href="~/DeleteScripture?id=@item.ID">Delete</a>)
+                                                                    )
+                                                                 )
+        </div>
+        <p><a href="~/AddScripture">Add a Scripture</a></p>
+
+    </main>
