--- a/MegaDeskWeb/AddQuote.cshtml
+++ b/MegaDeskWeb/AddQuote.cshtml
@@ -20,11 +20,15 @@
             SurfaceMaterial = (int)Enum.Parse(typeof(Desk.Surface), Request.Form["surfaceMaterial"])
         };
 
+
         DeskQuote newQuote = new DeskQuote(newDesk, Request.Form["customerName"], (int)Enum.Parse(typeof(DeskQuote.Delivery), Request.Form["deliveryTime"]), DateTime.Now);
-        
+
+        DeskQuote.Delivery dl = (DeskQuote.Delivery)newQuote.DeliveryTime;
+        string deliveryTime = dl.ToString();
+
         Database db = Database.Open("DeskLibrary");
         string insertCommand = "INSERT INTO DeskQuotes (Depth, Width, NumDrawers, SurfaceMaterial, OrderDate, CustomerName, Price, DeliveryTime) VALUES (@0, @1, @2, @3, @4, @5, @6, @7)";
-        db.Execute(insertCommand, newQuote.Desk.Depth, newQuote.Desk.Width, newDesk.NumDrawers, Request.Form["surfaceMaterial"], newQuote.OrderDate, newQuote.CustomerName, newQuote.Price, Request.Form["deliveryTime"]);
+        db.Execute(insertCommand, newQuote.Desk.Depth, newQuote.Desk.Width, newDesk.NumDrawers, Request.Form["surfaceMaterial"], newQuote.OrderDate, newQuote.CustomerName, newQuote.Price, deliveryTime);
         Response.Redirect("~/SearchQuotes");
     }
 }
